@@ -53,6 +53,10 @@ PostGIS 2.0.1
            on-the-line case
   - #1875, ST_SummaryStats returns NULL for all parameters except count
 	         when count is zero
+  - #1881, shp2pgsql-gui -- editing a field sometimes triggers 
+           removing row
+  - #1883, Geocoder install fails trying to run 
+           create_census_base_tables() (Brian Panulla)
 
 * Enhancements *
 
